--- a/src/main/resources/templates/auth/register.html
+++ b/src/main/resources/templates/auth/register.html
@@ -10,17 +10,24 @@
 <body class="bg-light">
 <div class="container py-5">
     <h2 class="mb-4">Регистрация</h2>
-    <form method="post" class="col-md-4">
+    <form th:action="@{/register}" method="post" th:object="${userDto}" class="col-md-4">
         <div th:if="${error}" class="alert alert-danger" th:text="${error}"></div>
+
         <div class="mb-3">
             <label class="form-label">Логин</label>
-            <input name="username" class="form-control" required/>
+            <input th:field="*{username}" class="form-control" required/>
+            <small class="text-danger" th:if="${#fields.hasErrors('username')}"
+                   th:errors="*{username}"></small>
         </div>
+
         <div class="mb-3">
             <label class="form-label">Пароль</label>
-            <input type="password" name="password" class="form-control" required/>
+            <input type="password" th:field="*{password}" class="form-control" required/>
+            <small class="text-danger" th:if="${#fields.hasErrors('password')}"
+                   th:errors="*{password}"></small>
         </div>
-        <button class="btn btn-primary">Зарегистрироваться</button>
+
+        <button type="submit" class="btn btn-primary">Зарегистрироваться</button>
         <a class="btn btn-link" th:href="@{/login}">Войти</a>
     </form>
 </div>
